[package]
name = "otpget"
version = "0.1.1"
edition = "2021"
description = "A command-line tool for automatically retrieving OTP codes from email messages"
license = "MIT"
repository = "https://github.com/milopadma/otpget"
documentation = "https://github.com/milopadma/otpget#readme"
homepage = "https://github.com/milopadma/otpget"

[dependencies]
imap = "2.4.1"
native-tls = "0.2.11"
dotenv = "0.15.0"
anyhow = "1.0"
mail-parser = "0.8"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
dialoguer = "0.11.0"
keyring = { version = "3.6.1", features = [
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.7"
once_cell = "1.19.0"
